fix: adjust add-post api
