# routes/communities/add-post.post.ts
@@ -2,7 +2,6 @@ import Airtable from "airtable";
 
 export default defineEventHandler(async (event) => {
   const body = await readBody(event);
-  const { id } = event.context.params;
   const base = new Airtable({ apiKey: process.env.AIRTABLE_API_KEY }).base(
     "appkWnHbz7wdymW3m"
   );
@@ -12,7 +11,7 @@ export default defineEventHandler(async (event) => {
       UserName: body.userName,
       Body: body.body,
       Created: new Date().toISOString(),
-      Community: [id],
+      Community: [body.communityId],
     })
     .then((record) => {
       console.log("record id", record.getId());
